@@ -261,7 +261,7 @@ jQuery(document).ready(function($) {
                         // We need to force showing of loading bar as if we place fnCallback after the table is populated it is wiped when refreshing
                         fnCallback(result);
                         $('#'+part_id+"_processing").attr('style', 'visibility: visible');
-                        getSubmissions(partTables[part_id], $('#assignment_id').html(), part_id, 0, refreshRequested[part_id]);
+                        getSubmissions(partTables[part_id], $('#assignment_id').html(), part_id, 0, refreshRequested[part_id], 0);
                     }
                 });
             },
@@ -539,14 +539,14 @@ jQuery(document).ready(function($) {
         $('.loading_gif').remove();
     }
 
-    function getSubmissions(table, assignment_id, part_id, start, refresh_requested) {
+    function getSubmissions(table, assignment_id, part_id, start, refresh_requested, total) {
         $.ajax({
             "dataType": 'json',
             "type": "POST",
             "url": "ajax.php",
             "async": true,
             "data": {action: "get_submissions", assignment: assignment_id, part: part_id, start: start,
-                        refresh_requested: refresh_requested, sesskey: M.cfg.sesskey},
+                        refresh_requested: refresh_requested, sesskey: M.cfg.sesskey, total: total},
             "success": function(result) {
                 eval(result);
                 start = result.end;
@@ -554,7 +554,7 @@ jQuery(document).ready(function($) {
                 table.fnAddData(result.aaData);
 
                 if (result.end < result.total) {
-                    getSubmissions(table, assignment_id, part_id, start, refresh_requested);
+                    getSubmissions(table, assignment_id, part_id, start, refresh_requested, result.total);
                 } else {
                     $('#'+part_id+"_processing").attr('style', 'visibility: hidden');
                     $('#refresh_'+part_id).show();
